[package]
name = "user"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "user_lib"
path = "src/lib.rs"

[[bin]]
name = "packetdump"
path = "src/bin/packetdump.rs"

[[bin]]
name = "packetstat"
path = "src/bin/packetstat.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
